# app/Http/Controllers/Api/ApiProductsController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\Category;
 use App\Models\Product;
 
 /**
@@ -64,7 +65,7 @@ class ApiProductsController extends Controller
 {
     public function __construct()
     {
-        $this->middleware('auth:api', ['except' => 'index']);
+        $this->middleware('auth:api', ['except' => ['index', 'getProductsByCategory']]);
     }
 
     /**
@@ -87,11 +88,83 @@ class ApiProductsController extends Controller
      * )
      */
 
-
     public function index()
     {
         // Retrieve products with their details and category
         $products = Product::where('status', 'published')
+            ->with('product_details') // assuming the relationship name is productDetails
+            ->with('category') // assuming the relationship name is category
+            ->get();
+
+        // Prepare formatted response
+        $formattedProducts = $products->map(function ($product) {
+            return [
+                'id' => $product->id,
+                'title' => $product->title,
+                'description' => $product->description,
+                'code' => $product->code,
+                'quantity' => $product->quantity,
+                'price' => $product->price,
+                'discount' => $product->discount,
+                'status' => $product->status,
+                'category' => [
+                    'id' => $product->category->id,
+                    'name' => $product->category->name,
+                ],
+                'product_details' => [
+                    'id' => $product->product_details->id,
+                    'product_id' => $product->product_details->product_id,
+                    'brochure' => $product->product_details->brochure,
+                    'driver' => $product->product_details->driver,
+                    'catalog' => $product->product_details->catalog,
+                    'map' => $product->product_details->map,
+                    'video' => $product->product_details->video,
+                    'photo' => $product->product_details->photo,
+                ],
+            ];
+        });
+
+        // Return JSON response
+        return response()->json([
+            'products' => $formattedProducts,
+        ], 200);
+    }
+    /**
+     * @OA\Get(
+     *     path="/api/products/get/{category}",
+     *     summary="Get products by category",
+     *     description="Retrieve products by category with their details and category",
+     *     tags={"Products"},
+     *     @OA\Parameter(
+     *         name="category",
+     *         in="path",
+     *         required=true,
+     *         description="Category name",
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="products",
+     *                 type="arrayOfJson",
+     *             )
+     *         )
+     *     ),
+     * )
+     */
+
+
+    public function getProductsByCategory($category)
+    {
+        $category = Category::where('name', $category)->first();
+        // Retrieve products with their details and category
+        $products = Product::where('status', 'published')
+            ->where('category_id', $category->id)
             ->with('product_details') // assuming the relationship name is productDetails
             ->with('category') // assuming the relationship name is category
             ->get();
